[package]
name = "creator-tip"
version = "0.1.0"
description = "Creator tipping program with 3% platform fee for CrabbyTV"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "creator_tip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
